--- a/src/html/detailmenu/katsucurry.html
+++ b/src/html/detailmenu/katsucurry.html
@@ -15,39 +15,43 @@
         <h1 class="title">Recipe</h1>
     </nav>
     <div class="contents">
+        <div class="topframe"></div>
+        <div class="frameimg"><br> <br></div>
+        <div class="detail">
+            <h1>Japanese Katsu Curry</h1>
+        </div>
         <div class="left">
             <div class="foodimg">
-                <div class="frametop"></div>
                 <img src="../../../assets/katsucurry.jpg" alt="recipe1" class="recipe1">
             </div>
             <div class="methods">
                 <h2>Methods</h2>
                 <ol>
-                    <li>Chop the chicken into small pieces and marinate with salt and pepper.</li>
-                    <li>Chop the onion, carrot and potato into small pieces.</li>
-                    <li>Heat up the oil in a pan and fry the chicken until golden brown.</li>
-                    <li>Remove the chicken from the pan and set aside.</li>
-                    <li>Heat up the butter in the pan and fry the onion, carrot and potato until soft.</li>
-                    <li>Add the curry and fry for 1 minute.</li>
-                    <li>Add the chicken and fry for 1 minute.</li>
-                    <li>Remove from the heat and serve.</li>
+                    <li>Put oil into a pot and sauté onion pieces until the edges start browning</li>
+                    <li>Add potato and carrot pieces to the pot and stir.</li>
+                    <li>Add water and bring it to a boil. Remove scum as it rises.</li>
+                    <li>Add curry roux and cook.</li>
+                    <li>Cook chicken cutlets and slice them.</li>
+                    <li>Put cooked rice on one side of a serving plate, place cutlet pieces next to the rice.</li>
+                    <li>Pour curry on the side next to the cutlet away from the rice.</li>
+                    <li>Place a small amount of fukujinzuke on the plate.</li>
                 </ol>
             </div>
         </div>
+        
         <div class="ingredients">
-            <h2>Ingredients</h2>
-            <ul>
-                <li><input type="checkbox" class="checkmark">Chicken</li>
-                <li><input type="checkbox" class="checkmark">Flour</li>
-                <li><input type="checkbox" class="checkmark">Egg</li>
-                <li><input type="checkbox" class="checkmark">Panko</li>
-                <li><input type="checkbox" class="checkmark">Curry</li>
-                <li><input type="checkbox" class="checkmark">Onion</li>
-                <li><input type="checkbox" class="checkmark">Carrot</li>
-                <li><input type="checkbox" class="checkmark">Potato</li>
-                <li><input type="checkbox" class="checkmark">Butter</li>
-                <li><input type="checkbox" class="checkmark">Oil</li>
-            </ul>
+                <h2>Ingredients</h2>
+                <ul>
+                    <li><input type="checkbox" class="checkmark">115g curry block</li>
+                    <li><input type="checkbox" class="checkmark">4 cups rice</li>
+                    <li><input type="checkbox" class="checkmark">400g onion</li>
+                    <li><input type="checkbox" class="checkmark">250g potato</li>
+                    <li><input type="checkbox" class="checkmark">100g carrot</li>
+                    <li><input type="checkbox" class="checkmark">4 chicken cutlet</li>
+                    <li><input type="checkbox" class="checkmark">10g fukujinzuke</li>
+                    <li><input type="checkbox" class="checkmark">800ml water</li>
+                    <li><input type="checkbox" class="checkmark">1 tbsp oil</li>
+                </ul>
         </div>
     </div>
 </body>
