--- a/src/html/index.html
+++ b/src/html/index.html
@@ -80,7 +80,7 @@
             </a>
         </div>
         <div class="box">
-            <a href="chocolatechipcookie.html">
+            <a href="detailmenu/cookies.html">
                 <div class="frame1"></div>
                 <p>Cookies</p>
                 <img src="../../assets/chocolatechipcookie.jpg" class="contentbox">
