--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,42 +2,48 @@
 <head>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500&family=Barlow:wght@400;500&family=Signika+Negative:wght@400;700&family=Signika:wght@400;500;600;700&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500&family=Barlow:wght@400;500&family=Signika+Negative:wght@400;700&family=Signika:wght@400;500;600;700&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <nav class="navbar">
         <h1 class="title">yummy.co</h1>
-        <div class="searchbar">
-            <input type="text" placeholder="Search..">
-            <button type="submit"><i class="fa fa-search fa-2x"></i></button>
+        <div class="search">
+            <div class="searchbar">
+                <input type="text" id="search-input" placeholder="Search for recipes.." onkeyup="search2()" autocomplete="off" onkeydown=scroll()>
+                <button type="submit" id="search-button" cursor="text"><i class="fa fa-search fa-2x"></i></button>
+            </div>
+            <!-- <div class="result" id="result">
+                <ul id="result-list">
+                    <li class="result-items" id="result-items"><a href="#"></a></li>
+                </ul>
+            </div> -->
         </div>
     </nav>
 
-    <div class="todaysrecipe">
-        <a href="detailmenu/katsucurry.html">
+    <div class="todaysrecipe" id="todaysrecipe">
+        <a href="">
             <div class="frametop"></div>
-            <p class="t1">Japanese</br>Katsu Curry</p>
+            <p class="t1" id="topmealstr"></p>
             <p class="t2">recipe of the day</p>
-            <img src="../../assets/katsucurry.jpg" alt="recipe1" class="recipe1">
+            <img src="" alt="recipe1" class="recipe1" id="topmealimg">
         </a>
     </div>
-
-    <div class="dmr">
+    <div id="scrollinto"></div>
+    <div class="dmr" id="dmr">
         Discover more recipes!
     </div>
-
-    <div class="boxes">
-        <div href="detailmenu/churros.html" class="box">
-            <a href="detailmenu/churros.html">
+    <div class="boxes" id="boxes">
+        <div class="box" id="frameMeal">
+            <a href="#">
                 <div class="frame1"></div>
-                <p>Churros</p>
-                <img src="../../assets/churros.png" class="contentbox">
+                <p class="nameMeal" id="mealName">Please wait...</p>
+                <img src="../../assets/loadimg.png" class="contentbox" id="mealImg">
             </a>
         </div>
-        <div class="box">
+        <!-- <div class="box" id="framerecipe">
             <a href="detailmenu/bananabread.html">
                 <div class="frame1"></div>
                 <p>Banana Bread</p>
@@ -85,7 +91,15 @@
                 <p>Cookies</p>
                 <img src="../../assets/chocolatechipcookie.jpg" class="contentbox">
             </a>
-        </div>
+        </div> -->
     </div>
     <div class="framebottom"></div>
+    <script>
+        const input=document.querySelector('#search-input');
+        input.addEventListener('keyup', (event) => {
+            const targetElmt = document.getElementById("scrollinto");    
+            targetElmt.scrollIntoView({behavior: 'smooth', block: 'start'});
+        });
+    </script>
+    <script src="../js/homepage.js"></script>
 </body>
